WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220020
Line snapping fails when the content is taller than the page.
https://bugs.webkit.org/show_bug.cgi?id=220020
Summary
Line snapping fails when the content is taller than the page.
alan
Reported
2020-12-18 11:15:34 PST
<
rdar://problem/68761119
>
Attachments
Patch
(2.23 KB, patch)
2020-12-18 11:35 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-12-18 11:35:28 PST
Created
attachment 416536
[details]
Patch
alan
Comment 2
2020-12-18 11:35:51 PST
will try to come up with a test case :(
EWS
Comment 3
2020-12-18 14:27:56 PST
Committed
r270990
: <
https://trac.webkit.org/changeset/270990
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416536
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug