Line snapping fails when the content is taller than the page. https://bugs.webkit.org/show_bug.cgi?id=220020 <rdar://problem/68761119>

Reviewed by Antti Koivisto.

When the snapped position of the current line falls off of the page, we call lineSnapAdjustment() recursively to figure out the snapped position on the next page.
We usually find the final position on the next page mostly slightly below the logical top.
However when the line is taller than the page itself, it does not fit the next page or any of the following pages (assuming uniform page height).

Let the line overflow when the pages can't accommodate it.

* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::lineSnapAdjustment const):


Canonical link: https://commits.webkit.org/232601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270990 268f45cc-cd09-0410-ab3c-d52691b4dbfc